@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.52 2004/12/21 12:00:59 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.53 2004/12/21 12:21:46 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -233,6 +233,11 @@ Exim version 4.50
       of ldap_search was unknown to exim because of LDAP_RES_SEARCH_REFERENCE.
       But simultaneously result of request was absolutely normal ldap result,
       so I produce this patch..."
+
+55. Some experimental protocols are using DNS PTR records for new purposes. The
+    keys for these records are domain names, not reversed IP addresses. The
+    dnsdb lookup now tests whether it's key is an IP address. If not, it leaves
+    it alone. Component reversal etc. now happens only for IP addresses.
 
 
 Exim version 4.43
